kubernetes/apps/forgejo/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: forgejo
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/24
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers
  namespace: forgejo
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: same-origin
