kubernetes/apps/forgejo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
